- removed z-positions menu from configuration - z-configuration menu.
- some cleanup
- fixed homing axes and "isprinting" flag to flag3 instead of flag2 to be in sync with original repetier.
- call for 
    Com::printFLN( PSTR("RequestPause:") );
    Com::printFLN( PSTR("RequestContinue:") ); if paused or continued

V RF.01.37t4.Mod (2017-09-03)
- Fixed UI_Language 1 missing motor text and advance text
- Forbid menu items when (paused and printing) [but printing over usb is not recognized as MENU_MODE_PRINTING yet!]
 ... prevent menu retraction/extruding and crash throug menu. Button Extrusion within pause is still possible.
- Continue within SD-Card menu now pushes back to menulevel 0
- Display-Status "heating bed" and "heating extruder" is now shown while heating (not overridden by "printer ready")

V RF.01.37t3.Mod (2017-08-16)
- small cleanup
- mhiers fix for home up while circuit mode @RF1000
- mhiers fix for his compilers complaining about "not const" message strings

V RF.01.37t2.Mod (2017-08-16)
- Prevent continue while pause position is not reached. This might have resulted in neverending pause.
- use of repetiers better INCREMENT_MIN_MAX definition. He sais: "// this version not have single byte variable rollover bug"

V RF.01.37t.Mod (2017-08-15)
- Pause now can lower Extruder Temps. Continue recovers temps and pushes re-retract afterwards.

V RF.01.37s9.Mod (2017-08-12)
- Z-Max Fix / Z-Override-Fix
- Testfunction for stepper drivers stall detection -> I guess this hardware feature is not usefull att all.

V RF.01.37s7.Mod (2017-08-10)
- Optional Temperature Sensor on RF2000 now reports the Temperatures as Heated-Chamber Sensor. https://forum.repetier.com/discussion/4102/heated-chamber -> Letter C in printTemperatures. This is fun, because Repetier-Server 0.86.2 now has an extra temperatures diagram for this.