@@ -6129,7 +6129,7 @@ void loopRF( void ) //wird so aufgerufen, dass es ein ~100ms takt sein sollte.
             g_pauseBeepDone = 1;
         }
 
-        if( g_pauseStatus == PAUSE_STATUS_PAUSED )
+        if( g_pauseStatus == PAUSE_STATUS_PAUSED ) //and absolutly not PAUSE_STATUS_HEATING
         {
 #if EXTRUDER_CURRENT_PAUSE_DELAY
             if( (uTime - g_uPauseTime) > EXTRUDER_CURRENT_PAUSE_DELAY ) //das sind alle 5s 
@@ -6479,12 +6479,12 @@ void loopRF( void ) //wird so aufgerufen, dass es ein ~100ms takt sein sollte.
             Printer::disableYStepper();
             Printer::disableZStepper();
             Extruder::disableAllExtruders();
-#endif // FEATURE_OUTPUT_FINISHED_OBJECT
-
 #if FAN_PIN>-1
             // disable the fan
             Commands::setFanSpeed(0,false);
 #endif // FAN_PIN>-1
+
+#endif // FEATURE_OUTPUT_FINISHED_OBJECT
 
             cleanupXPositions();
             cleanupYPositions();
@@ -6501,7 +6501,8 @@ void loopRF( void ) //wird so aufgerufen, dass es ein ~100ms takt sein sollte.
         {
             Com::printFLN( PSTR( "loopRF(): aborting print because of a temperature sensor defect" ) );
         }
-
+        Com::printFLN( PSTR( "RequestStop:" ) ); //tell repetierserver to stop.
+        Com::printFLN( PSTR( "// action:disconnect" ) ); //tell octoprint to disconnect
         sd.abortPrint();
     }
 #endif // FEATURE_ABORT_PRINT_AFTER_TEMPERATURE_ERROR
@@ -6728,6 +6729,13 @@ inline void checkPauseStatus_fromTask(){
             {
                 // we have reached the pause position - nothing except the extruder can have been moved
                 g_pauseStatus = PAUSE_STATUS_PAUSED;
+                g_uStartOfIdle = 0;
+                uid.menuLevel = 0; //uid.executeAction(UI_ACTION_TOP_MENU);
+                uid.menuPos[uid.menuLevel] = 0;
+                UI_STATUS_UPD( UI_TEXT_PAUSED );
+                Com::printFLN( PSTR("RequestPause:") ); //repetier
+                Com::printFLN( PSTR( "// action:pause" ) ); //octoprint
+                Printer::setMenuMode( MENU_MODE_PAUSED, true );
             }
             break;
         }
@@ -6747,6 +6755,13 @@ inline void checkPauseStatus_fromTask(){
             }else{
 #endif // FEATURE_MILLING_MODE
                 g_pauseStatus = PAUSE_STATUS_PAUSED;
+                g_uStartOfIdle = 0;
+                uid.menuLevel = 0; //uid.executeAction(UI_ACTION_TOP_MENU);
+                uid.menuPos[uid.menuLevel] = 0;
+                UI_STATUS_UPD( UI_TEXT_PAUSED );
+                Com::printFLN( PSTR("RequestPause:") ); //repetier
+                Com::printFLN( PSTR( "// action:pause" ) ); //octoprint
+                Printer::setMenuMode( MENU_MODE_PAUSED, true );
 #if FEATURE_MILLING_MODE
             }
 #endif // FEATURE_MILLING_MODE
@@ -6760,6 +6775,13 @@ inline void checkPauseStatus_fromTask(){
                 if( !processingDirectMove() )
                 {
                     g_pauseStatus = PAUSE_STATUS_PAUSED;
+                    g_uStartOfIdle = 0;
+                    uid.menuLevel = 0; //uid.executeAction(UI_ACTION_TOP_MENU);
+                    uid.menuPos[uid.menuLevel] = 0;
+                    UI_STATUS_UPD( UI_TEXT_PAUSED );
+                    Com::printFLN( PSTR("RequestPause:") ); //repetier
+                    Com::printFLN( PSTR( "// action:pause" ) ); //octoprint
+                    Printer::setMenuMode( MENU_MODE_PAUSED, true );
                 }
             }
             break;
@@ -6798,7 +6820,8 @@ void pausePrint( void )
             uid.menuLevel = 0; //uid.executeAction(UI_ACTION_TOP_MENU);
             uid.menuPos[uid.menuLevel] = 0;
             UI_STATUS_UPD( UI_TEXT_PAUSING );
-            Com::printFLN( PSTR("RequestPause:") );
+            Com::printFLN( PSTR("RequestPause:") ); //repetier
+            Com::printFLN( PSTR( "// action:pause" ) ); //octoprint
             waitforPauseStatus_fromButton(PAUSE_STATUS_GOTO_PAUSE1);
             g_uPauseTime    = HAL::timeInMilliseconds();
             g_pauseBeepDone = 0;
@@ -6862,6 +6885,7 @@ void continuePrint( void )
         {
             // process the extruder only in case we are in mode "print"
 #if NUM_EXTRUDER > 0
+            g_pauseStatus = PAUSE_STATUS_HEATING;
             bool wait = false; 
             for(uint8_t i = 0; i < NUM_EXTRUDER; i++){
 #if EXTRUDER_CURRENT_PAUSE_DELAY
@@ -6896,6 +6920,7 @@ void continuePrint( void )
         if( nPrintingMode )
         {
 #if NUM_EXTRUDER > 0
+            g_pauseStatus = PAUSE_STATUS_HEATING;
             bool wait = false; 
             for(uint8_t i = 0; i < NUM_EXTRUDER; i++){
 #if EXTRUDER_CURRENT_PAUSE_DELAY
@@ -6924,7 +6949,8 @@ void continuePrint( void )
         }
     }
 
-    Com::printFLN( PSTR("RequestContinue:") );
+    Com::printFLN( PSTR("RequestContinue:") ); //repetier
+    Com::printFLN( PSTR( "// action:resume" ) ); //octoprint
     // wait until the next move is started
     g_pauseMode   = PAUSE_MODE_NONE;
     g_pauseStatus = PAUSE_STATUS_NONE;
@@ -7131,7 +7157,7 @@ void determineZPausePositionForMill( void )
 
 } // determineZPausePositionForMill
 
-void waitUntilContinue( void ) //Nibbels: Verstehe ich nicht! Man sollte Pause und Continue nutzen?? Aber warum das? Wegen der Gcode-Queue? Aber Pause hält auch die Queue an. .... TODO
+void waitUntilContinue( void ) //Nibbels: Verstehe ich nicht! Man sollte Pause und Continue nutzen?? Aber warum das? Wegen der Gcode-Queue? Aber Pause hält auch die Queue an. .... TODO-> 03.09.2017 Das ist ein Warte-GCode 3071 der aufs Auflösen der Pause wartet, aber auch andere GCodes blockt. Kann mir nur gerade keine Anwendung dafür ausdenken.
 {
     if( g_pauseStatus == PAUSE_STATUS_NONE )
     {
@@ -8198,7 +8224,7 @@ void processCommand( GCode* pCommand )
                 }
                 else
                 {
-                    showInvalidSyntax( pCommand->M );
+                    queueTask( TASK_PAUSE_PRINT ); 
                 }
 
                 break;
@@ -10660,6 +10686,12 @@ void processCommand( GCode* pCommand )
                 for(uint8_t driver = 1; driver <= 5; driver++){
                   readMotorStatus( driver );
                 }
+                break;
+            }
+            case 3988: // M3988 Stop message for Repetier-Server/-Host - Testfunction || by Nibbels
+            {
+                Com::printFLN( PSTR( "RequestStop:" ) );
+                Com::printFLN( PSTR( "// action:disconnect" ) ); //tell octoprint to disconnect
                 break;
             }
 
@@ -14115,6 +14147,8 @@ void dump( char type, char from )
 void doEmergencyStop( char reason )
 {
     showError( (void*)ui_text_emergency_stop );
+    Com::printFLN( PSTR( "RequestStop:" ) ); //tell repetierserver to stop.
+    Com::printFLN( PSTR( "// action:disconnect" ) ); //tell octoprint to disconnect
 
     Com::printF( PSTR( "doEmergencyStop(): block all" ) );
     if( reason == STOP_BECAUSE_OF_Z_MIN )
